feat: Add edit and delete buttons

--- a/ui/templates/dashboard.templ
+++ b/ui/templates/dashboard.templ
@@ -90,6 +90,20 @@ templ Application(app *application.Application) {
 			</button>
             </a>
 			<button 
+                class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 mr-2"
+                hx-delete={fmt.Sprintf("/application/%s/delete", app.Name)}
+                hx-target="#route-target"
+                >
+				Delete
+			</button>
+			<button 
+                class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 mr-2"
+                hx-get={fmt.Sprintf("/edit-application/%s", app.Name)}
+                hx-target="#route-target"
+                >
+				Edit
+			</button>
+			<button 
                 class={
                     "inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 mr-2", 
                     templ.KV("hidden", app.Status == "Running")
