feat(#9): Added an RingList type and used it to store logs
To avoid memory problems we limit the amount of logs we keep in memory
using an RingList or Circular list.
Also enable auto scroll as default for the log pages
Fixed the initial selected option on edit an application

--- a/ui/templates/application_log.templ
+++ b/ui/templates/application_log.templ
@@ -29,11 +29,11 @@ templ ApplicationLogs(appName string) {
                 }
             </script>
 		</head>
-		<body class="bg-slate-950 p-2">
+		<body class="bg-slate-950 p-2" onload="toggleAutoScroll(document.getElementById('auto-scroll-button'))">
             <div class="text-slate-400" hx-ext="sse" id="logs" sse-connect={fmt.Sprintf("/application/%s/logs", appName)} sse-swap="message" hx-swap="beforeend">
             </div>
             <div class="fixed bottom-2 right-2">
-                <button id="auto-scroll-button" onclick="toggleAutoScroll(this)" class="bg-slate-800 text-slate-400 px-2 py-1 rounded">Enable auto scroll</button>
+                <button id="auto-scroll-button" onclick="toggleAutoScroll(this)" class="bg-slate-800 text-slate-400 px-2 py-1 rounded">Disable auto scroll</button>
             </div>
             <div id="scroll-to-bottom"></div>
         </body>
