feat: Added cancel button on application form page:

--- a/ui/templates/new_application.templ
+++ b/ui/templates/new_application.templ
@@ -177,6 +177,14 @@ templ ApplicationForm(app application.Application) {
 				</div>
 				<div class="flex items-center p-6 justify-end">
 					<button
+						class="mr-4 inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border px-4 py-2"
+                        type="button"
+                        hx-get="/"
+                        hx-target="#route-target"
+					>
+						Cancel
+					</button>
+					<button
 						class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
 						type="submit"
 					>
